--- a/HTML/contactus.html
+++ b/HTML/contactus.html
@@ -35,7 +35,7 @@ function showHeadOffice(){
 }
 function showBranches(){
 	
-	document.getElementById("headOfficeId").style.display="none";
+	document.getElementById("").style.display="none";
 	document.getElementById("getInTouchId").style.display="none";
 	document.getElementById("branchId").style.display="";
 }
